LPA-1529 2x icons created for mobile. minor spacing fix.

--- a/service-front/assets/sass/patterns/_lpa-list.scss
+++ b/service-front/assets/sass/patterns/_lpa-list.scss
@@ -12,6 +12,9 @@
 		padding-top: 6px;
 		border-top: 1px solid $border-colour;
 	}
+	@include media($max-width: 360px) {
+		padding: 8px 0 6px;
+	}
 	.icon {
 		position: relative;
 		top: 10px;
